testcases/error/exceed_limit_hierarch_depth.veryl
module exceed_limit_hierarchy_depth #(
    param X: u32 = 1,
) {
    inst u: exceed_limit_hierarchy_depth #( X: X + 1 );
}
